--- a/DntApp/src/app/account/register/register.component.html
+++ b/DntApp/src/app/account/register/register.component.html
@@ -13,9 +13,36 @@
       <div class="col-lg-3"><label for="Price">Price</label></div>
       <div class="col-lg-6"><input id="Price" class="col-lg-9" type="text" [(ngModel)]="product.Price"></div>
     </div>
-    <div class="form-group col-lg-12">
-      <button class="btn btn-danger" (click)="fnClose()">Cancel</button> &nbsp;&nbsp;&nbsp;
-      <button class="btn btn-success" (click)="fnSave()">Save</button>
+    <div class="form-group col-lg-3">
+          <label class="checkbox-inline">
+            <input type="checkbox" name="isActive" [(ngModel)]="isActive">Is Active
+          </label>
+    </div>
+     <div class="form-group col-lg-3">
+      <label>Gender</label>
+      <div class="form-control">
+        <label class="radio-inline">
+          <input type="radio" name="gender" value="male" [(ngModel)]="gender">
+          Male
+        </label>
+        <label class="radio-inline">
+          <input type="radio" name="gender" value="female" [(ngModel)]="gender">
+          Female
+        </label>
+      </div>
+      <div class="form-group">
+        <label for="department">Department</label>
+        <select id="department" name="department"  [(ngModel)]="department" class="form-control">
+          <option value="1">Help Desk</option>
+          <option value="2">HR</option>
+          <option value="3" selected>IT</option>
+          <option value="4">Paroll</option>
+        </select>
+      </div>
+      <div class="form-group col-lg-12">
+        <button class="btn btn-danger" (click)="fnClose()">Cancel</button> &nbsp;&nbsp;&nbsp;
+        <button class="btn btn-success" (click)="fnSave()">Save</button>
+      </div>
     </div>
   </div>
 </div>
